Update aggregator api (#4)
* add API endpoints to aggregator for compatibility
* add API doc link for aggregator
* fix health handler
* update programs handler
* update response types and swagger doc
* update licence
